[gd_scene load_steps=6 format=1]

[ext_resource path="res://Kontroloj/Niveloj.gd" type="Script" id=1]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Temoj/Butono_sxveba.tres" type="StyleBox" id=3]
[ext_resource path="res://Temoj/Butono_premita.tres" type="StyleBox" id=4]
[ext_resource path="res://Temoj/Butono.tres" type="StyleBox" id=5]

[node name="Niveloj" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 1200.0
script/script = ExtResource( 1 )

[node name="Fadi" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Nova_epoko" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -150.0
margin/right = 0.0
margin/bottom = -150.0

[node name="Rektangulo" type="Polygon2D" parent="Nova_epoko"]

transform/pos = Vector2( -100, 0 )
polygon = Vector2Array( 500, 200, 100, 200, 100, 500, 500, 500 )
uv = Vector2Array(  )
color = Color( 0.878431, 0.878431, 0.878431, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Rekordo" type="Label" parent="Nova_epoko"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = -267.0
margin/bottom = -350.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "123"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="Nova_epoko"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 400.0
margin/right = -800.0
margin/bottom = -500.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Via Rekordo"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ludi" type="Button" parent="Nova_epoko"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 500.0
margin/right = 400.0
margin/bottom = 600.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ludi"
flat = false

[node name="Polygon2D" type="Polygon2D" parent="Nova_epoko"]

transform/pos = Vector2( -93, 1 )
polygon = Vector2Array( 493, 199, 780, 232, 743, 499, 493, 599 )
uv = Vector2Array(  )
color = Color( 0.403922, 0.227451, 0.717647, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="Nova_epoko"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.6, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 200.0
margin/right = -817.0
margin/bottom = -589.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
text = "Nova epoko"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Malnova_epoko" type="Control" parent="."]

editor/display_folded = true
anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 3
margin/left = 0.0
margin/top = -150.0
margin/right = 0.0
margin/bottom = 150.0

[node name="Rektangulo" type="Polygon2D" parent="Malnova_epoko"]

transform/pos = Vector2( 300, 450 )
polygon = Vector2Array( 500, 200, 100, 200, 100, 500, 500, 500 )
uv = Vector2Array(  )
color = Color( 0.878431, 0.878431, 0.878431, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Rekordo" type="Label" parent="Malnova_epoko"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 700.0
margin/right = -667.0
margin/bottom = -800.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "123"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="Malnova_epoko"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 850.0
margin/right = -1200.0
margin/bottom = -950.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Via Rekordo"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ludi" type="Button" parent="Malnova_epoko"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 950.0
margin/right = 800.0
margin/bottom = 1050.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ludi"
flat = false

[node name="Polygon2D" type="Polygon2D" parent="Malnova_epoko"]

transform/pos = Vector2( -400, 450 )
polygon = Vector2Array( 498, 299, 800, 200, 800, 600, 476, 501 )
uv = Vector2Array(  )
color = Color( 0.403922, 0.227451, 0.717647, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="Malnova_epoko"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.6, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 650.0
margin/right = -600.0
margin/bottom = -1094.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
text = "Malnova epoko"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Lingvo" type="Button" parent="."]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 950.0
margin/right = 643.0
margin/bottom = 1093.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Language/Lingvo"
flat = false

[node name="Gvidilo" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -500.0
margin/top = 1075.0
margin/right = -929.0
margin/bottom = -1218.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Gvidilo"
flat = false

[node name="Pri" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -500.0
margin/top = 950.0
margin/right = -927.0
margin/bottom = -1093.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pri"
flat = false

[node name="Versio" type="Label" parent="."]

anchor/bottom = 1
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 1100.0
margin/right = 550.0
margin/bottom = -1267.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "v2.3.2"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="tween_complete" from="Fadi" to="." method="_on_Fadi_tween_complete"]

[connection signal="pressed" from="Nova_epoko/Ludi" to="." method="_on_Ludi_pressed"]

[connection signal="pressed" from="Malnova_epoko/Ludi" to="." method="_on_Ludi_malnova_pressed"]

[connection signal="pressed" from="Lingvo" to="." method="_on_Lingvo_pressed"]

[connection signal="pressed" from="Gvidilo" to="." method="_on_Gvidilo_pressed"]

[connection signal="pressed" from="Pri" to="." method="_on_Pri_pressed"]


